templates/tpl_modified_nova/stylesheet.css
/* ... */
/* red-hat-display-600 - latin */
@font-face {
  font-display: swap; 
  font-family: 'Red Hat Display';
  font-style: normal;
  font-weight: 600;
  src: url('css/fonts/red-hat-display-v14-latin-600.woff2') format('woff2'),
       url('css/fonts/red-hat-display-v14-latin-600.ttf') format('truetype'); 
}
/* red-hat-display-700 - latin */
@font-face {
  font-display: swap; 
  font-family: 'Red Hat Display';
  font-style: normal;
  font-weight: 700;
  src: url('css/fonts/red-hat-display-v14-latin-700.woff2') format('woff2'), 
       url('css/fonts/red-hat-display-v14-latin-700.ttf') format('truetype'); 
}
/* red-hat-display-900 - latin */
@font-face {
  font-display: swap; 
  font-family: 'Red Hat Display';
  font-style: normal;
  font-weight: 900;
  src: url('css/fonts/red-hat-display-v14-latin-900.woff2') format('woff2'), 
       url('css/fonts/red-hat-display-v14-latin-900.ttf') format('truetype'); 
}
/* 01. END fonts */



/* 02. START Globals (body, tables, margin, padding, etc.) */

/* Disable font boosting on mobile browsers */
body * {
  -moz-text-size-adjust: none;    /* Firefox Mobile */
  -webkit-text-size-adjust: 100%; /* Safari */
  -ms-text-size-adjust:     100%; /* Windows Mobile */
  max-height:          1000000px; /* Chrome for Android */
}

body {
  position: relative;
  font-family: 'Red Hat Display', sans-serif;
  font-size:14px;
  line-height:22px;
  font-weight: 400;
  background:#fff;
  color:#555;
}

/* reset margin and padding */
*, *::before, *::after {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

/* prevent flicker in responsive tabs & accordion */ 
#horizontalAccordion { display:none; }
#horizontalAccordion ul.resp-tabs-list { display:none !important; }
#horizontalAccordion .resp-tab-content { display:none; }
#horizontalTab ul.resp-tabs-list { list-style-type:none; }
#horizontalTab ul.resp-tabs-list li { display: inline-block; }
#horizontalTab .resp-tabs-container { display: none; }

/* prevent flicker of mobile menu */
#mobile_menu { display:none; }

/* scrollbars */
* {
  scrollbar-width: thin;
  scrollbar-color: #ccc #eee;
}
*::-webkit-scrollbar {
  width: 9px;
}
*::-webkit-scrollbar-track {
  background: #eee;
}
*::-webkit-scrollbar-thumb {
  background-color: #ccc;
  border-radius: 0px;
  border: 1px solid #eee;
}
.no_scroll,
.viewer-open {
  overflow:hidden; 
}
/* srollbars prevent layout swift when open toggle menus */    
html {
  scrollbar-gutter: stable;
}     
/* scrollbars safari */
@media not all and (min-resolution: 0.001dpcm) {
  .no_scroll, .viewer-open { 
    padding-right: calc(9px - (100vw - 100%)); 
  }
}

/* prevent zoom of fields on iphone */
@supports (-webkit-overflow-scrolling: touch) {
  input[type=text], input[type=password], input[type=email], input[type=tel] { font-size: 16px !important; }
  select { font-size: 16px !important;  }
  textarea { font-size: 16px !important; }
  .SumoSelect > .CaptionCont { font-size:16px !important; } 
}   

/* fix z-index for trusted shops container */
div[id^="trustbadge-container-"] {
  z-index:1299 !important;
}
/* prevent layout shift for oil cookie consent */
.as-oil {
  position: fixed;
}

/* lazy loading */
.lazyload,
.lazyloading {
  opacity: 0;
}
.lazyloaded {
  opacity: 1;
  transition: opacity 1s ease;
}

/* clear floats */
.clearer {
  line-height:0px;
  height:0px;
  clear:both;   
}
.cf::before, .cf::after { content: ''; display: table; }
.cf::after { clear: both; }

/* font-weight for bold/strong */
strong, b, .strong, .bold {
  font-weight:700;
}
 
 /* global for p and table */
p {
  margin:14px 0;
}

table {
  width:100%;
  border-spacing: 0;
  border-collapse:collapse;
}
table td {
  padding:5px 0px;
}
.td_full {
  width:100%;
}

/* global products image handling */
.prod_image {
  display:block;
  text-align: center;
  width: 100%;
  position:relative;
} 
.prod_image:before {
  content: "";
  display:block;
  padding-top: 100%;
}
.prod_image img {
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width:auto;
  height:auto;
  max-width: 100%;
  max-height: 100%;
}

/* smaller font sizes */
.font_midi {
  font-size:13px !important;
  line-height:19px !important;
}                                                                
.font_midi input[type="radio"] ~ label:before     { line-height:18px !important; }  
.font_midi input[type="radio"] ~ label:after      { line-height:18px !important; }
.font_midi input[type="checkbox"] ~ label:before  { line-height:19px !important; }
.font_midi input[type="checkbox"] ~ label:after   { line-height:19px !important; }

.font_small {
  font-size:12px !important;
  line-height:18px !important;
}
.font_small input[type="radio"] ~ label:before    { line-height:17px !important; }  
.font_small input[type="radio"] ~ label:after     { line-height:17px !important; }
.font_small input[type="checkbox"] ~ label:before { line-height:18px !important; }
.font_small input[type="checkbox"] ~ label:after  { line-height:18px !important; }


/* helper padding, margin, border, etc. */
.border_0 { border: 0px !important; }

.mt_0     { margin-top:  0px !important; } 
.mt_5     { margin-top:  5px !important; } 
.mt_10    { margin-top: 10px !important; } 
.mt_15    { margin-top: 15px !important; } 
.mt_20    { margin-top: 20px !important; } 
.mt_25    { margin-top: 25px !important; } 
.mt_30    { margin-top: 30px !important; } 
.mt_40    { margin-top: 40px !important; } 
.mt_50    { margin-top: 50px !important; } 

.mb_0     { margin-bottom:  0px !important; } 
.mb_5     { margin-bottom:  5px !important; } 
.mb_10    { margin-bottom: 10px !important; } 
.mb_15    { margin-bottom: 15px !important; } 
.mb_20    { margin-bottom: 20px !important; } 
.mb_25    { margin-bottom: 25px !important; } 
.mb_30    { margin-bottom: 30px !important; } 
.mb_40    { margin-bottom: 40px !important; } 
.mb_50    { margin-bottom: 50px !important; } 

.my_0     { margin-top:  0px !important; margin-bottom:  0px !important; } 
/* ... */

